syntax = "proto3";

package store;
option go_package="./store";

message Response{
  string errMsg = 1;
  string code = 2;
  string message = 3;
}

/*
  * 申请创建店铺
 */
message CreateStoreReq{
  int64 UserId = 1;
  string Name = 2;
  string Desc = 3;
}
message CreateStoreRes{
  Response result = 1;
}
/*
  * 成为门店会员
 */
message JoinStoreMemberReq{
  int64 StoreId = 1;
  int64 UserId = 2;
}
message JoinStoreMemberRes{
  Response result = 1;
}
/*
  * 记录聊天消息
 */
message SaveChatReq{
  int64 StoreId = 1;
  int64 UserId = 2;
  string Message = 3;
  string saveTime = 4;
}

service StoreBecome{
  rpc CreateStore(CreateStoreReq) returns (CreateStoreRes);
  rpc JoinStoreMember(JoinStoreMemberReq) returns (JoinStoreMemberRes);
  rpc SaveChatMessage(SaveChatReq) returns (Response);
}
